# AnimalinuxApp

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  PROBAR_MINT.txt  PROMPT_CLAUDE_CODE.md  PUBLICAR_AUR.txt  README.md  animalinux.desktop  hyprland.conf.example  install.sh  pyproject.toml
animalinux/: __init__.py  __main__.py  app.py  control.py  folderimport.py  framedit.py  frameditor.py  hypr.py  i18n.py  library.py  overlay.py  pack.py  painteditor.py  paths.py  pixeleditor.py  procedural.py  projects.py  puppet.py  rigeditor.py  settings.py  spritesheet.py  tips.py  tray.py
animalinux/core/: __init__.py  autostart.py  gpu.py  image_processor.py  library.py  mascot_manager.py  pose_generator.py
animalinux/editors/: __init__.py  editor_utils.py  icons.py  paint_editor.py  pixel_editor.py
animalinux/overlay/: __init__.py  _x11_hints.py  live_animation.py  normal_animation.py  x11_animation.py
animalinux/ui/: __init__.py  control.py  guide_widgets.py  theme.py
examples/: crear_ejemplo.py
tests/: conftest.py  test_library.py  test_pack.py
