[project]
name = "animalinux"
version = "0.4.3"
description = "Mascotas animadas en el escritorio (Hyprland/Wayland y GNOME/Cinnamon/MATE/Xfce/X11), estilo AnimaEngine"
requires-python = ">=3.10"
dependencies = ["Pillow", "python-xlib"]

[project.scripts]
animalinux = "animalinux.app:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["animalinux*"]
